--- a/index.html
+++ b/index.html
@@ -7,41 +7,61 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  Your Result
-  76
-  of 100
+  <div class="container">
+    <div class="wrapper">
+      <div class="left">
+        <h2 class="left__title">
+          Your Result
+        </h2>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+        <div class="left__score">
+          <h3 class="left__score__actual">76</h3>
+          <p class="left__score__whole">of 100</p>
+        </div>
 
-  Reaction
-  80 / 100
+        <div class="left__summary">
+          <h3 class="left__summary__title">Great</h3>
+          <p class="left__summary__text">You scored higher than 65% of the people who have taken these tests.</p>
+      </div>
 
-  Memory
-  92 / 100
+      
+    </div>
+    <div class="right">
+        <h2 class="right__title"> Summary</h2>
 
-  Verbal
-  61 / 100
+        <div class="right__stats">
+          <div class="right__stats__reaction right__stats__boxes">
+            <img src="/assets/images/icon-reaction.svg" alt=" reaction">
+            <h3 class="right__stats__reaction__title right__stats__title">Reaction</h3>
+            <p class="right__stats__reaction__score"> <span class="right__stats--bold">80</span>  / 100</p>
+          </div>
+          <div class="right__stats__memory right__stats__boxes">
+            <img src="/assets/images/icon-memory.svg" alt=" reaction">
+            <h3 class="right__stats__memory__title right__stats__title">Memory</h3>
+            <p class="right__stats__memory__score"><span class="right__stats--bold">92</span> / 100</p>
+          </div>
 
-  Visual
-  72 / 100
+          <div class="right__stats__verbal right__stats__boxes">
+            <img src="/assets/images/icon-verbal.svg" alt=" reaction">
+            <h3 class="right__stats__verbal__title right__stats__title">Verbal</h3>
+            <p class="right__stats__verbal__score"><span class="right__stats--bold">61</span> / 100</p>
+          </div>
 
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+          <div class="right__stats__visual right__stats__boxes">
+            <img src="/assets/images/icon-visual.svg" alt=" reaction">
+            <h3 class="right__stats__visual__title right__stats__title">Visual</h3>
+            <p class="right__stats__visual__score"><span class="right__stats--bold">72</span> / 100</p>
+          </div>
+        </div>
+
+        <div class="right__button">
+          <button>Continue</button>
+        </div>
+      </div>
   </div>
 </body>
 </html>
