--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+ <!-- Container start  -->
   <div class="container">
     <div class="wrapper">
+      <!-- left part start  -->
       <div class="left">
         <h2 class="left__title">
           Your Result
         </h2>
-
         <div class="left__score">
           <h3 class="left__score__actual">76</h3>
           <p class="left__score__whole">of 100</p>
         </div>
-
         <div class="left__summary">
           <h3 class="left__summary__title">Great</h3>
           <p class="left__summary__text">You scored higher than 65% of the people who have taken these tests.</p>
       </div>
-
-      
     </div>
+    <!-- left part end  -->
+
+    <!-- right part start  -->
     <div class="right">
         <h2 class="right__title"> Summary</h2>
-
         <div class="right__stats">
           <div class="right__stats__reaction right__stats__boxes">
             <img src="/assets/images/icon-reaction.svg" alt=" reaction">
@@ -44,24 +43,23 @@
             <h3 class="right__stats__memory__title right__stats__title">Memory</h3>
             <p class="right__stats__memory__score"><span class="right__stats--bold">92</span> / 100</p>
           </div>
-
           <div class="right__stats__verbal right__stats__boxes">
             <img src="/assets/images/icon-verbal.svg" alt=" reaction">
             <h3 class="right__stats__verbal__title right__stats__title">Verbal</h3>
             <p class="right__stats__verbal__score"><span class="right__stats--bold">61</span> / 100</p>
           </div>
-
           <div class="right__stats__visual right__stats__boxes">
             <img src="/assets/images/icon-visual.svg" alt=" reaction">
             <h3 class="right__stats__visual__title right__stats__title">Visual</h3>
             <p class="right__stats__visual__score"><span class="right__stats--bold">72</span> / 100</p>
           </div>
         </div>
-
         <div class="right__button">
           <button>Continue</button>
         </div>
+        <!-- right part end  -->
       </div>
   </div>
+   <!-- Container end  -->
 </body>
 </html>
