--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Results summary component</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
- <!-- Container start  -->
+  <!-- Container start  -->
   <div class="container">
     <div class="wrapper">
       <!-- left part start  -->
@@ -25,18 +28,18 @@
         <div class="left__summary">
           <h3 class="left__summary__title">Great</h3>
           <p class="left__summary__text">You scored higher than 65% of the people who have taken these tests.</p>
+        </div>
       </div>
-    </div>
-    <!-- left part end  -->
+      <!-- left part end  -->
 
-    <!-- right part start  -->
-    <div class="right">
+      <!-- right part start  -->
+      <div class="right">
         <h2 class="right__title"> Summary</h2>
         <div class="right__stats">
           <div class="right__stats__reaction right__stats__boxes">
             <img src="/assets/images/icon-reaction.svg" alt=" reaction">
             <h3 class="right__stats__reaction__title right__stats__title">Reaction</h3>
-            <p class="right__stats__reaction__score"> <span class="right__stats--bold">80</span>  / 100</p>
+            <p class="right__stats__reaction__score"> <span class="right__stats--bold">80</span> / 100</p>
           </div>
           <div class="right__stats__memory right__stats__boxes">
             <img src="/assets/images/icon-memory.svg" alt=" reaction">
@@ -59,7 +62,8 @@
         </div>
         <!-- right part end  -->
       </div>
-  </div>
-   <!-- Container end  -->
+    </div>
+    <!-- Container end  -->
 </body>
+
 </html>
