Updated readme and metadata

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
+  <meta name="authot" content="Zsolt Varjú"></meta>
+  <meta name="description" content="My first try on responsive web design">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Results summary component</title>
+  <title>Result summary component</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
